avance creación bovinos

--- a/plataformaGestionPredial/src/app/app.component.css
+++ b/plataformaGestionPredial/src/app/app.component.css
@@ -1,5 +1,5 @@
 #brand{
-    min-height: 20%;
+    min-height: 20vh;
     /* max-height: 20%; */
     /* background-color: rgb(204, 225, 14); */
     background-color: rgb(31, 139, 78);
