--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -10,33 +10,46 @@
     <div class="container pt-4">
         <div class="card">
             <div class="card-header">
-                <h3>Ingresar documento</h3>
+                <h3>Ingresar {{title}}</h3>
             </div>
             <div class="card-body">
-                <form id="form" #f="ngForm" method="POST" >
-                    <div class="form-group mb-2">
-                        <label for="name">Nombre</label>
-                        <input type="text" class="form-control" id="name" name="name" ngModel #name="ngModel" required>
+                <form *ngFor="let field of fields; let i = index " id="form" #f="ngForm" method="POST" ngNativeValidate>
+                    <div *ngIf="field.type=='password'" class="form-group mb-2">
+                        <label for="{{field.name}}">{{field.name}}</label>
+                        <input type="password" class="form-control" id="{{field.name}}" name="{{field.name}}" ngModel #name="ngModel" required>
                     </div>
-                    <div class="form-group mb-2">
-                        <label for="description">Descripción</label>
-                        <input type="text" class="form-control" id="description" name="description" ngModel #description="ngModel" required>
+                    <div *ngIf="field.type=='number'" class="form-group mb-2">
+                        <label for="{{field.name}}">{{field.name}}</label>
+                        <input type="number" class="form-control" id="{{field.name}}" name="{{field.name}}" ngModel #name="ngModel" required>
                     </div>
-                    <div class="form-group mb-2">
-                        <label for="type">Tipo</label>
-                        <select class="form-select" name="type" id="type">
+                    <div *ngIf="field.type=='text'" class="form-group mb-2">
+                        <label for="{{field.name}}">{{field.name}}</label>
+                        <input type="text" class="form-control" id="{{field.name}}" name="{{field.name}}" ngModel #name="ngModel" required>
+                    </div>
+                    <div *ngIf="field.type=='select'" class="form-group mb-2">
+                        <label for="{{field.name}}">{{field.name}}</label>
+                        <select class="form-select" name="{{field.name}}" id="{{field.name}}" required>
                             <option value="">Seleccione</option>
-                            <option value="0">Visita técnica</option>
-                            <option value="1">Individualización</option>
-                            <option value="2">Compra</option>
+                            <ng-container *ngFor="let option of field.options; let i = index">
+                                <option value="{{option.value}}">{{option.name}}</option>
+                            </ng-container>
                         </select>
                     </div>
-                    <div class="form-group mb-4">
-                        <label for="file">Seleccione archivo</label>
-                        <input type="file" class="form-control" id="file" name="file" (change)="handleFileInput($event)">
+                    <div *ngIf="field.type=='file'" class="form-group mb-2">
+                        <label for="{{field.name}}">{{field.name}}</label>
+                        <input type="file" class="form-control" id="{{field.name}}" name="{{field.name}}" (change)="handleFileInput($event)">
                     </div>
-                    <div class="form-group">
-                        <button type="submit" (click)="registerDocument()" class="btn btn-primary">Ingresar</button>
+                    <div *ngIf="field.type=='date'" class="form-group mb-2">
+                        <label for="{{field.name}}">{{field.name}}</label>
+                        <input type="date" class="form-control" id="{{field.name}}" name="{{field.name}}">
+                    </div>
+                    <div *ngIf="field.type=='submit'" class="form-group mb-2">
+                        <!-- <button type="submit" (click)="registerDocument()" class="btn btn-primary"><div *ngIf="!registrando" class="spinner-border" role="status">
+                        </div><span class="sr-only">Loading...</span>{{field.name}}</button> -->
+                        <button (click)="registerDocument()" class="btn btn-primary" type="button">
+                            <span *ngIf="registrando" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                            register
+                        </button>
                     </div>
                 </form>
             </div>
