--- a/plataformaGestionPredial/src/app/main/main.component.html
+++ b/plataformaGestionPredial/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div style="height:100vh;background-color: burlywood;" class="row">
+<div style="height:90vh;background-color: burlywood;" class="row">
     <div id="sidebar" class="col-2">
         <div id="brand" class="row">
             <img src="../assets/predio.svg" alt="predio" routerLink="/dashboard" >
@@ -13,6 +13,13 @@
         </div>
         <div id="content">
             <router-outlet></router-outlet>
+            <!-- <div class="footer">
+                <app-footer></app-footer>
+            </div> -->
+        </div>
+        <!-- <app-footer></app-footer> -->
+        <div class="footer">
+            <app-footer></app-footer>
         </div>
     </div>
 </div>
