--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -2,7 +2,7 @@
 <div class="container pt-2">
   <form>
     <div class="mb-3 row">
-      <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label">Search by name:</label>
+      <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label">Search by name or DIIO:</label>
       <div class="col-xs-3 col-sm-auto">
         <input
           id="table-complete-search"
@@ -12,12 +12,12 @@
           [(ngModel)]="service.searchTerm"
         />
       </div>
-      <div class="col-xs-3 col-sm-auto">N° bovines: {{(items$| async)?.length}} </div>
+      <!-- <div class="col-xs-3 col-sm-auto">N° bovines: {{(items$| async)?.length}} </div> -->
       <span class="col col-form-label" *ngIf="service.loading$ | async">Loading...</span>
     </div>
 
     <table class="table table-striped" >
-      <thead>
+      <thead style="position: sticky">
         <tr>
           <th scope="col">#</th>
           <th scope="col">Image</th>
@@ -27,6 +27,7 @@
           <th scope="col" >Date Birth</th>
           <th scope="col" >Mother</th>
           <th scope="col" >Type</th>
+          <!-- <th scope="col" >Age</th> -->
           <!-- <th scope="col" >Actions</th> -->
           <!-- <th scope="col" >Color</th>
           <th scope="col" >State</th>
@@ -34,7 +35,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let country of items$ | async; let i = index ">
+        <tr *ngFor="let country of items$ | async; let i = index " (click)="editBovine(country.id)">
           <th scope="row">{{i+1}}</th>
           <td>
             <img
@@ -52,6 +53,7 @@
           <td><ngb-highlight [result]=" country.dateBirth | date:'dd/MM/yyyy'" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]="country.mother" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]="country.type" [term]="service.searchTerm"></ngb-highlight></td>
+          <!-- <td>{{country.age}}</td> -->
           <!-- <td><i class="fa-solid fa-pen-to-square"></i></td> -->
         </tr>
       </tbody>
