--- a/plataformaGestionPredial/src/app/login/login.component.css
+++ b/plataformaGestionPredial/src/app/login/login.component.css
@@ -7,5 +7,6 @@ a{
 #main{
     background: url("../../assets/fondoHeader.jpg") no-repeat center center fixed;
     background-size: cover;
+    height: 100vh;
     /*opacity: 0.5;*/
   }
