--- a/plataformaGestionPredial/src/app/login/login.component.html
+++ b/plataformaGestionPredial/src/app/login/login.component.html
@@ -15,7 +15,7 @@
                     <div class="form-group mb-2">
                         <label for="password">Contraseña</label>
                         <input type="password" class="form-control" id="password" name="password" required placeholder="ej: 123456">
-                        <span class="small">Entre 5 a 10 carácteres alfanuméricos</span>
+                        <!-- <span class="small">Entre 5 a 10 carácteres alfanuméricos</span> -->
                     </div>
                     <div class="form-group" style="text-align: center">
                         <button class="btn btn-primary" (click)="login($event);">Ingresar</button>
