--- a/plataformaGestionPredial/src/styles.css
+++ b/plataformaGestionPredial/src/styles.css
@@ -3,6 +3,7 @@
 @import '~bootstrap-icons/font/bootstrap-icons.css';
 
 #sidebar{
+    /* height: 100vh; */
     background-color: rgb(31, 139, 78);
 }
 #content{
@@ -15,8 +16,8 @@
 body{
     overflow-x: hidden;
     /* position:absolute; */
-    height: 100vh;
+    max-height: 90vh !important;
     /* max-height: 100vh; */
 }
-html, body { height: 100%; width: 100%;}
+html, body { width: 100%;}
 body { display:inline-block;margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
