avance formularios bovinos

--- a/plataformaGestionPredial/src/app/footer/footer.component.html
+++ b/plataformaGestionPredial/src/app/footer/footer.component.html
@@ -1,1 +1,1 @@
-<p>Plataforma de gestión predial ® . Versión: DEMO </p>
+<div class="body"><p>Plataforma de gestión predial ® . Versión: <span class="badge badge-secondary">DEMO</span> </p></div>
