--- a/plataformaGestionPredial/src/app/bovines/bovines.component.html
+++ b/plataformaGestionPredial/src/app/bovines/bovines.component.html
@@ -1,2 +1,2 @@
-<app-forms [title]="title" [fields]="fields"></app-forms>
+<app-forms [nameForm]="bovineForm" [title]="title" [fields]="fields"></app-forms>
 <!-- <app-forms></app-forms> -->
