--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <!-- VACUNOS -->
-<div class="row menu" (click)="changeOpenLink()" >
+<div class="row menu" (click)="changeOpenLink(1)" >
     <div class="col-3">
         <fa-icon [icon]="faCow" style="float: right;"></fa-icon>
     </div>
@@ -46,7 +46,7 @@
 </div>
 
 <!-- IDENTIFICADORES -->
-<div class="row menu" routerLink="/list">
+<div class="row menu" routerLink="/identifiers">
     <div class="col-3">
         <i class="bi bi-postcard"></i>
     </div>
@@ -57,12 +57,12 @@
 </div>
 
 <!-- SUMINISTROS -->
-<div class="row menu" (click)="changeOpenLink()">
+<div class="row menu" (click)="changeOpenLink(2)">
     <div class="col-3">
         <fa-icon [icon]="faToolbox" style="float: right;"></fa-icon>
     </div>
     <div class="col-9">
-        <a class="nav-link" >Suministros<span class="badge badge-secondary">PRO</span>
+        <a class="nav-link" >Insumos<span class="badge badge-secondary">PRO</span>
             <i [ngClass]="openLink ? 'bi bi-caret-down' : 'bi bi-caret-right'"></i>
         </a>
     </div>
@@ -112,7 +112,7 @@
 <!-- TRABAJADORES -->
 <div class="row menu" routerLink="/">
     <div class="col-3">
-        <i class="fa-solid fa-user-doctor"></i>
+        <i class="fa-solid fa-people-group"></i>
     </div>
     <div class="col-9">
         <a class="nav-link" >Trabajadores<span class="badge badge-secondary">PRO</span></a>
@@ -128,6 +128,16 @@
         <a class="nav-link" >Agenda<span class="badge badge-secondary">PRO</span></a>
     </div>
 </div>
+
+<!-- Instalaciones
+<div class="row menu" routerLink="/">
+    <div class="col-3">
+        <i class="fa-sharp fa-solid fa-farm"></i>
+    </div>
+    <div class="col-9">
+        <a class="nav-link" >Dependencias<span class="badge badge-secondary">PRO</span></a>
+    </div>
+</div> -->
 
 <!-- TEST -->
 <!-- <a href="#submenu1" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
