--- a/plataformaGestionPredial/src/styles.css
+++ b/plataformaGestionPredial/src/styles.css
@@ -4,7 +4,9 @@
 
 #sidebar{
     /* height: 100vh; */
+    overflow-y: auto;
     background-color: rgb(31, 139, 78);
+
 }
 #content{
     background-color: rgb(253, 255, 253);
@@ -19,5 +21,5 @@ body{
     max-height: 90vh !important;
     /* max-height: 100vh; */
 }
-html, body { width: 100%;}
+html, body { max-height:90vh; width: 100%;}
 body { display:inline-block;margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
