Mejora mantenedor documentos y bovinos

--- a/plataformaGestionPredial/src/app/bovines/bovines.component.html
+++ b/plataformaGestionPredial/src/app/bovines/bovines.component.html
@@ -1,2 +1,2 @@
-<app-forms [configurations]="configurations" [callBackFunction]="registerBovine" [title]="title" [fields]="fields"></app-forms>
+<app-forms [configurations]="configurations" [callBackFunction]="registerBovine" [fields]="fields"></app-forms>
 <!-- <app-forms></app-forms> -->
