--- a/plataformaGestionPredial/src/app/shared/pro/pro.component.css
+++ b/plataformaGestionPredial/src/app/shared/pro/pro.component.css
@@ -3,6 +3,7 @@
     place-items:center; */
     /* vertical-align: bottom; */
     text-align: center;
+    padding-top: 20%;
     vertical-align: text-bottom;
     height: 100%;
 }
