--- a/plataformaGestionPredial/src/app/documents/documents.component.html
+++ b/plataformaGestionPredial/src/app/documents/documents.component.html
@@ -1,1 +1,1 @@
-<app-forms [title]="title" [fields]="fields"></app-forms>
+<app-forms [configurations]="configurations" [callBackFunction]="registerDocument" [fields]="fields"></app-forms>
